fix: more java 11 issues